# MED_TEST

./: .gitignore  README.md  pyproject.toml
task_1/: csv_service.py  script.py  validate.py
task_2/: .env  main.py
task_2/app/core/: config.py
task_2/app/services/: fact_cat_service.py
task_2/tests/: test_fact_cat_service.py
