[project]
name = "med-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Vlad",email = "vladislavdragunov9@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
